adding test runner in DockerFile
